[tool.poetry]
name = "peterpark"
version = "0.1.0"
description = "For Prepration"
authors = ["AdeelKhan"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"
flask-restx = "^0.5.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
